# Codeforces

./: 118A.cpp  148A.cpp  263A.cpp  266A.cpp  281A.cpp  339A.cpp  Beautiful_Matrix.cpp  Bit.cpp  CMakeLists.txt  DAPM.cpp  Domino_piling.cpp  IQTest.cpp  IWannaBeAGuy.cpp  Next_Round.cpp  Petya_and_Strings.cpp  README.md  Team.cpp  TheatreSquare.cpp  Watermelon.cpp  Way_Too_Long_Words.cpp
