cmake_minimum_required(VERSION 3.17)
project(Codeforces)

set(CMAKE_CXX_STANDARD 14)

add_executable(Codeforces main.cpp Watermelon.cpp Way_Too_Long_Words.cpp Next_Round.cpp Team.cpp Domino_piling.cpp Bit.cpp Petya_and_Strings.cpp Beautiful_Matrix.cpp DAPM.cpp TheatreSquare.cpp IQTest.cpp IWannaBeAGuy.cpp 148A.cpp 118A.cpp 263A.cpp 339A.cpp 281A.cpp 266A.cpp)